Main header is done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <title>Homework 08</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+<header class="main-header">
+    <div class="container">
+        <nav class="clearfix">
+            <a class="main-logo" href="#">
+                <img src="img/panakeia-logo.png" alt="Panakeia logo">
+            </a>
+            <ul class="navigation-list clearfix">
+                <li><a href="#">Fusce at</a></li>
+                <li><a href="#">Facilisis</a></li>
+                <li><a href="#">Ante donec</a></li>
+                <li><a href="#">Blandit rhoncus</a></li>
+                <li><a href="#">Placerat</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
