Introductory section is done

--- a/index.html
+++ b/index.html
@@ -25,5 +25,38 @@
         </nav>
     </div>
 </header>
+<section class="introduction">
+    <img class="interior-photo" src="img/panakeia-interior.jpg" alt="Panakeia interior">
+    <div class="outer-container">
+        <div class="container">
+            <h1 class="intro-heading">Integer at tortor ut magna</h1>
+            <p class="intro-description">finibus lobortis sed quis tellus.</p>
+            <ul class="food-menu clearfix">
+                <li>
+                    <img src="img/food-item-1.png" alt="Dish 1 photo">
+                    <h5>Tincidunt</h5>
+                    <p>Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus
+                        egestas
+                        efficitur. Sed quam dolor.</p>
+                </li>
+                <li>
+                    <img src="img/food-item-2.png" alt="Dish 2 photo">
+                    <h5>Duis bibendum</h5>
+                    <p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo,
+                        ullamcorper
+                        non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst. </p>
+                </li>
+                <li>
+                    <img src="img/food-item-3.png" alt="Dish 3 photo">
+                    <h5>Donec ligula</h5>
+                    <p>Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut
+                        arcu
+                        arcu, faucibus eu risus blandit,.</p>
+                </li>
+            </ul>
+            <a class="read-more-btn" href="#">Read more</a>
+        </div>
+    </div>
+</section>
 </body>
 </html>
