Section 'Our news' is done

--- a/index.html
+++ b/index.html
@@ -58,5 +58,39 @@
         </div>
     </div>
 </section>
+<section class="our-news">
+    <div class="container">
+        <h2 class="news-heading">Our news</h2>
+        <ul class="food-articles-list clearfix">
+            <li>
+                <article class="food-article">
+                    <img src="img/food-article-img-1.png" alt="Food article image 1">
+                    <h3>Lorem ipsum</h3>
+                    <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium
+                        lobortis erat. Nulla vitae hendrerit odio.</p>
+                    <a class="read-more-btn" href="#">Read more</a>
+                </article>
+            </li>
+            <li>
+                <article class="food-article">
+                    <img src="img/food-article-img-2.png" alt="Food article image 2">
+                    <h3>Lorem ipsum</h3>
+                    <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium
+                        lobortis erat. Nulla vitae hendrerit odio.</p>
+                    <a class="read-more-btn" href="#">Read more</a>
+                </article>
+            </li>
+            <li>
+                <article class="food-article">
+                    <img src="img/food-article-img-3.png" alt="Food article image 3">
+                    <h3>Lorem ipsum</h3>
+                    <p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium
+                        lobortis erat. Nulla vitae hendrerit odio.</p>
+                    <a class="read-more-btn" href="#">Read more</a>
+                </article>
+            </li>
+        </ul>
+    </div>
+</section>
 </body>
 </html>
