Section 'Newsletter' is done

--- a/index.html
+++ b/index.html
@@ -92,5 +92,14 @@
         </ul>
     </div>
 </section>
+<section class="newsletter">
+    <h2>Newsletter</h2>
+    <p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo,
+        ullamcorper non diam sit amet, luctus condimentum metus</p>
+    <form class="signup-form" action="#">
+        <input type="email" name="email" placeholder="email adress">
+        <input type="submit" name="submit" value="Sign up">
+    </form>
+</section>
 </body>
 </html>
