Main footer is done

--- a/index.html
+++ b/index.html
@@ -101,5 +101,48 @@
         <input type="submit" name="submit" value="Sign up">
     </form>
 </section>
+<footer class="main-footer">
+    <nav class="secondary-navigation">
+        <ul class="container clearfix">
+            <li class="outer-list-item">
+                <ul class="inner-nav-list">
+                    <li><a href="#">Ad litora torquent</a></li>
+                    <li><a href="#">Per conubia</a></li>
+                    <li><a href="#">Nostra</a></li>
+                    <li><a href="#">Per inceptos</a></li>
+                    <li><a href="#">Himenaeos</a></li>
+                    <li><a href="#">In consectetur</a></li>
+                </ul>
+            </li>
+            <li class="outer-list-item">
+                <ul class="inner-nav-list">
+                    <li><a href="#">Taciti sociosqu</a></li>
+                    <li><a href="#">Ad litora torquent</a></li>
+                    <li><a href="#">Per conubia</a></li>
+                    <li><a href="#">Himenaeos</a></li>
+                    <li><a href="#">In consectetur</a></li>
+                    <li><a href="#">Nisi sed blandit</a></li>
+                    <li><a href="#">Tincidunt</a></li>
+                </ul>
+            </li>
+            <li class="outer-list-item">
+                <ul class="inner-nav-list">
+                    <li><a href="#">Nostra</a></li>
+                    <li><a href="#">Per inceptos</a></li>
+                    <li><a href="#">Himenaeos</a></li>
+                    <li><a href="#">In consectetur</a></li>
+                    <li><a href="#">Nisi sed blandit</a></li>
+                    <li><a href="#">Tincidunt</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <div class="copyright">
+        <div class="container">
+            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>Try awsome tool for desgners <a href="#">symu.co</a></p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
