Section 'Product details' is done

--- a/index.html
+++ b/index.html
@@ -101,6 +101,32 @@
         <input type="submit" name="submit" value="Sign up">
     </form>
 </section>
+<section class="product-details">
+    <ul class="container">
+        <li class="product">
+            <article>
+                <h3>Ipsum dolor sit amet</h3>
+                <p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis
+                    tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.
+                </p>
+                <p>Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis,
+                    et accumsan ex porta.</p>
+                <a class="sign-up-btn" href="#">Sign up</a>
+            </article>
+        </li>
+        <li class="product">
+            <article>
+                <h3>Ipsum dolor sit amet</h3>
+                <p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis
+                    tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.
+                </p>
+                <p>Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis,
+                    et accumsan ex porta.</p>
+                <a class="sign-up-btn" href="#">Sign up</a>
+            </article>
+        </li>
+    </ul>
+</section>
 <footer class="main-footer">
     <nav class="secondary-navigation">
         <ul class="container clearfix">
